--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aleohq/sdk": "^0.6.9",
     "@puzzlehq/sdk": "^0.1.36",
+    "@tanstack/react-query": "^5.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
